package com.transit.model;

public enum Permission {
    VIEW_ROUTES,
    EDIT_OWN_PUPIL_RECORDS,
    EDIT_ANY_PUPIL_RECORDS,
    MANAGE_ROUTES,
    MANAGE_CONTRACTS,
    CORRECT_ANY_DATA,
    VIEW_REPORTS
}
